# face-rec-heatmaps

./: .gitignore  README.md  autoencoder.py  autoencoder_data.py  autoencoder_train.py  config.yaml  environment.yml  heatmaps_68.npy  heatmaps_grouped.npy  playground.ipynb  pyproject.toml  requirements.txt
scripts/: build_vggface2.py  run_autoencoder_train.sh  run_build_vggface2.sh
src/: __init__.py  autoencoder.py  autoencoder_data.py  autoencoder_train.py  dataset.py  headpose.py  heatmaps.py  indices_dlib68.py  indices_mediapipe.py  landmarks.py  metrics.py  model.py  train.py  transforms.py  utils.py
tests/: test_autoencoder_smoke.py  test_smoke.py
